--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,41 @@
 alembic==1.3.2
+appdirs==1.4.3
+atomicwrites==1.3.0
+attrs==19.3.0
+black==19.10b0
 Click==7.0
+colorama==0.4.3
 ecdsa==0.14.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
+importlib-metadata==1.4.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+more-itertools==8.1.0
+packaging==20.1
+pathspec==0.7.0
+pluggy==0.13.1
 psycopg2==2.8.4
+py==1.8.1
 pyasn1==0.4.8
+pycodestyle==2.5.0
+pyparsing==2.4.6
+pytest==5.3.4
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-jose==3.1.0
+regex==2020.1.8
 rsa==4.0
 six==1.13.0
 SQLAlchemy==1.3.12
+toml==0.10.0
+typed-ast==1.4.1
 urllib3==1.25.7
+wcwidth==0.1.8
 Werkzeug==0.16.0
+zipp==2.1.0
